# yo-kai-watch-somen-spirits-rewrite

./: start_backend.sh  start_frontend_dev.sh
backend/: .gitignore  README.md  backend_setup.sh  damage_calc.py  main.py  pyproject.toml  pytest.ini  seed_database.py
backend/app/api/: attacks.py  attitudes.py  battles.py  equipment.py  inspirits.py  matchmaking.py  skills.py  soul_gems.py  soultimates.py  teams.py  techniques.py  users.py  yokai.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  attack.py  attitude.py  equipment.py  inspirit.py  skill.py  soul_gem.py  soultimate.py  technique.py  user.py  yokai.py
backend/app/services/: battle_engine.py
backend/app/sockets/: battle_socket.py
backend/seed_data/: attacks.json  attitudes.json  equipment.json  inspirits.json  skills.json  soul_gems.json  soultimates.json  techniques.json  yokai.json
backend/tests/: conftest.py  test_api.py  test_damage_calc.py  test_damage_comparison.py  test_damage_in_battle.py  test_db.py  test_integration.py  test_models.py  test_socket.py  test_utils.py
somen-spirits/: TODO.md  package-lock.json  package.json
somen-spirits/app/: globals.css  layout.tsx  page.module.css  page.tsx
somen-spirits/app/battle/: page.module.css  page.tsx
somen-spirits/app/countdown/: page.module.css  page.tsx
somen-spirits/app/matchmaking/: page.module.css  (+1 more)
somen-spirits/hooks/: index.ts  useAudio.ts  useGameData.ts  useTeams.ts  useYokai.ts
somen-spirits/store/: audioStore.ts  battleStore.ts  index.ts  matchmakingStore.ts  teamStore.ts  userStore.ts
(+10 files in other folders)
